Add OAuth/OIDC authentication with Bearer token API support (v0.9.6-rbac)
Adds OAuth 2.0 Authorization Code flow with OIDC auto-discovery, JWT
validation via JWKS, and file-based secret management. Extends auth to
support Bearer token headers for programmatic API access (scripts, CI/CD,
curl) alongside the existing browser session cookie flow. RBAC role
mapping from JWT claims uses the same system as LDAP.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>