@@ -7,7 +7,7 @@ packageSummary := "Elasticsearch web admin tool"
 packageDescription := """cerebro is an open source(MIT License) elasticsearch web admin tool built
   using Scala, Play Framework, AngularJS and Bootstrap."""
 
-version := "0.9.4"
+version := "0.9.5-rbac"
 
 scalaVersion := "2.13.4"
 
@@ -25,7 +25,9 @@ libraryDependencies ++= Seq(
   "org.xerial"        %  "sqlite-jdbc"             % "3.34.0",
   "org.specs2"        %% "specs2-junit"  % "4.10.0" % "test",
   "org.specs2"        %% "specs2-core"   % "4.10.0" % "test",
-  "org.specs2"        %% "specs2-mock"   % "4.10.0" % "test"
+  "org.specs2"        %% "specs2-mock"   % "4.10.0" % "test",
+  "com.unboundid"     %  "unboundid-ldapsdk"       % "6.0.3"  % "test",
+  "com.nimbusds"      %  "nimbus-jose-jwt"         % "9.31"
 )
 
 libraryDependencies += filters
@@ -43,6 +45,17 @@ sources in (Compile, doc) := Seq.empty
 
 enablePlugins(JavaServerAppPackaging)
 enablePlugins(SystemdPlugin)
+
+// Java 17+ module access for Guice reflection in forked test JVM
+Test / javaOptions ++= Seq(
+  "--add-opens=java.base/java.lang=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.io=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED",
+  "--add-opens=java.base/sun.net.www.protocol.file=ALL-UNNAMED"
+)
+Test / fork := true
 
 pipelineStages := Seq(digest, gzip)
 
